--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f8ff;
+    margin: 0;
+    padding: 20px;
+}
+
 header {
     background-color: #4682b4;
     padding: 15px;
@@ -41,6 +48,10 @@ nav ul li a:hover::after {
     display: block;
 }
 
+.names h2 {
+    text-align: center;
+    position: relative;
+}
 
 .cat-table h2 {
     font-size: 2em;
