--- a/style.css
+++ b/style.css
@@ -72,13 +72,6 @@ nav ul li a:hover::after {
     left: -30px;
 }
 
-.cat-table h2 {
-    font-size: 2em;
-    color: #333;
-    text-align: center;
-    position: relative;
-}
-
 table {
     margin: 0 auto;
     border-collapse: collapse;
@@ -87,6 +80,22 @@ table {
 
 table, th, td {
     border: 1px solid #333;
+}
+
+th {
+    background-color: #4682b4;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.cat-table h2 {
+    font-size: 2em;
+    color: #333;
+    text-align: center;
+    position: relative;
 }
 
 .divider {
