add some responsiveness to table

--- a/style.css
+++ b/style.css
@@ -91,6 +91,14 @@ tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
+@media (max-width: 600px) {
+    table {
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+}
+
 .cat-table h2 {
     font-size: 2em;
     color: #333;
