--- a/style.css
+++ b/style.css
@@ -164,3 +164,18 @@ tr:nth-child(even) {
 .accordion input:checked ~ .content {
     max-height: 100px;
 }
+
+.progress-bar {
+    width: 100%;
+    background-color: #f3f3f3;
+    height: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.progress {
+    width: 60%;
+    height: 100%;
+    background-color: #4682b4;
+    border-radius: 10px;
+}
